# django-utils-lib

./: .gitignore  README.md  Taskfile.yml  conftest.py  mypy.ini  pyproject.toml
.github/workflows/: ci-checks.yml
django_utils_lib/: auth.py  cli.py  cli_utils.py  commands.py  constants.py  lazy.py  logger.py  logging_utils.py  middleware.py  models.py  requests.py
django_utils_lib/stubs/: settings.py
django_utils_lib/testing/: pytest_plugin.py  utils.py
django_utils_lib/tests/: test_requests.py  test_simplestaticfileserver.py  test_utils.py
