[tool.poetry]
name = "django-utils-lib"
version = "0.1.0"
description = "A utility library for working with Django"
authors = ["Innolitics"]
readme = "README.md"

[tool.poetry.scripts]
dul-cli = "django_utils_lib.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.5"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
mypy = "^1.11.2"
django-stubs = {extras = ["compatible-mypy"], version = "^5.0.4"}
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
pytest-django = "^4.9.0"
pytest-playwright = "^0.5.2"
filelock = "^3.16.0"
debugpy = "^1.8.5"
django = "*"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["A", "E", "F", "I", "W"]
unfixable = ["F841"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
log_level = "INFO"
log_cli_level = "INFO"
log_cli = true
testpaths = [
    "django_utils_lib/tests"
]
pythonpath = ". django_utils_lib"
django_find_project = false
auto_debug = true
auto_debug_wait_for_connect = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

